# verdict-risk

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  lint.yml  pypi-publish.yml  release.yml
src/trade_risk_engine/: __init__.py  benchmark.py  engine.py  execution.py  gates.py  state.py  webhook.py
tests/: test_issue_11.py  test_property.py  test_risk_engine_enrichments.py
typings/msgspec/: __init__.pyi  json.pyi
