[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trade-risk-engine"
version = "0.1.0"
description = "Zero-allocation absolute drawdown mathematics evaluators."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["msgspec>=0.18.0", "pydantic>=2.0.0", "opentelemetry-api>=1.20.0", "opentelemetry-sdk>=1.20.0", "httpx>=0.20.0"]

[project.scripts]
trade-risk-benchmark = "trade_risk_engine.benchmark:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "hypothesis", "ruff", "mypy"]
test = ["pytest", "pytest-cov", "hypothesis"]

[tool.hatch.build.targets.wheel]
packages = ["src/trade_risk_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "B008"]
per-file-ignores = { "tests/*" = ["S101", "E402"] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
mypy_path = "typings"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.hypothesis",
  "/tests",
  "/typings",
  "/.github",
  "/.pytest_cache",
  "/.ruff_cache",
  "/.mypy_cache",
  "/.coverage"
]
